--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "test-project-1",
+  "name": "test-task",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Vitalina-Oleksiienko.github.io/test-project-1",
+  "homepage": "https://Vitalina-Oleksiienko.github.io/test-task",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /test-project-1/",
+    "build": "parcel build src/*.html --public-url /test-task/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Vitalina-Oleksiienko/test-project-1.git"
+    "url": "git+https://github.com/Vitalina-Oleksiienko/test-task.git"
   },
   "keywords": [],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Vitalina-Oleksiienko/test-project-1/issues"
+    "url": "https://github.com/Vitalina-Oleksiienko/test-task/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
